# SIPs

./: README.md
Product Management/server/: Cargo.toml
Product Management/server/src/: .env  main.rs
Product Management/server/src/database/: mod.rs  session.rs  structures.rs
Product Management/server/src/routes/: root.rs
Project_Ignition/admin/: Cargo.toml
Project_Ignition/admin/src/: main.rs
Project_Ignition/admin/src/components/: auth_form.rs
Project_Ignition/api/: .firebaserc  firestore.rules
Project_Ignition/api/functions/: package-lock.json  package.json
Project_Ignition/api/functions/src/: index.ts
Project_Ignition/client/: App.tsx  package-lock.json  package.json
Project_Ignition/client/components/: Article.tsx  Authentication.tsx
Project_Ignition/client/context/: authentication.ts  database.ts
Project_Ignition/client/firebase/: firebase.config.js
Project_Ignition/client/ios/: Podfile
Project_Ignition/client/ios/client/: Info.plist
Project_Ignition/client/ios/client.xcodeproj/: project.pbxproj
Project_Ignition/client/ios/client.xcodeproj/xcshareddata/xcschemes/: client.xcscheme
Project_Ignition/client/pages/: Authentication.tsx  Error.tsx  Loading.tsx  Main.tsx
