[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
surrealdb = "1.0.0-beta.8"
rocket = "0.5.0-rc.2"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
regex = "0.2"
mysql = "*"
chrono = "0.4"
dotenv = "0.15.0"
